--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body{
-    /*text-align: center;*/
     background-color: black;
     color: white;
 }
@@ -13,25 +12,13 @@ p{
     color: green; 
 }
 
-#divstyle{
+div{
     border: dotted;
     border-width: 2px;
+}
+
+.myDiv{ 
     width: 100px;
-    height: 100px;
+    height: 100px; 
 }
 
-ol{
-    list-style-type: lower-alpha;
-}
-
-ul{
-    list-style-type: square;
-    }
-
-#aboutStyle{
-     font-size: 13px; 
-     position: fixed;
-        text-align: center;
-        bottom: 5px;
-        width: 100%;
-}
